--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,6 +14,10 @@ arenas:
     locations:
       world: world
       spawns:
+        lobby:
+          x: 0
+          y: 0
+          z: 0
         attacking:
           x: 0
           y: 0
