--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,7 +10,7 @@ arenas:
     team-selection: false
     countdown: 30
     chicken-health: 50
-    player-lifes: 3
+    player-lives: 3
     players:
       min: 2
       max: 10
