Add chickenleave command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -11,3 +11,5 @@ commands:
     description: Joins an arena
   chickenset:
     description: Joins an arena
+  chickenleave:
+    description: Joins an arena
