--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -7,8 +7,7 @@ lobby: #General Lobby location, this is where players are teleported after the g
   z: 0
   world: world
 arenas: #Config for each arenas, to add a new arena just duplicate the default item and increase its name by one (so your first additional arena would be named 0)
-  0:
-    name: chicken #Arena name, indicative only
+  myarena:
     clear-inventory: true #Clear player inventory on join? (item are returned on leave) - Kits are not available if disabled
     default-kit: demo #Default kit given on join
     countdown: 30 #How long is the countdown after we have enough players?
