Implement friendly fire

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,4 @@
-config-version: 4 #DONT CHANGE THIS!
+config-version: 6 #DONT CHANGE THIS!
 auto-update: true #Do we want to always keep the plugin updated?
 update-channel: master #master = stable | dev = development versions
 lobby: #General Lobby location, this is where players are teleported after the game os over (/chickenset lobby)
@@ -15,6 +15,7 @@ arenas: #Config for each arenas, to add a new arena just duplicate the default i
     countdown: 30 #How long is the countdown after we have enough players?
     chicken-health: 50 #How many half hearts does the chicken have?
     player-lives: 3 #How many times do the players respawn before they are eliminated?
+    friendly-fire: false #Do we want friendly fire on this arena?
     enabled: true #Enables or disables loading an arena
     players:
       min: 2 #Min players to trigger an arena start
